--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -1,8 +1,9 @@
 .site-list a {
   display: block;
-  padding: 45px 30px;
+  padding-top: 26px;
+  padding-right: 30px;
+  padding-bottom: 28px;
   padding-left: 75px;
-  padding-bottom: 8px;
 
   .font(17px, 24px);
   color: @color-black;
@@ -10,18 +11,19 @@
 
   background-color: transparent;
   border-top: 1px solid @color-grey;
-  border-bottom: 1px solid @color-grey;
+
+  &__item {
+    min-height: 79px;
+  }
 }
 
 .site-list a[href] {
   &:hover {
     color: rgba(0, 0, 0, 0.6);
-    border-top-color: @color-grey;
   }
 
   &:active {
     color: rgba(0, 0, 0, 0.3);
-    border-top-color: @color-grey;
   }
 }
 
@@ -33,14 +35,16 @@
     align-items: center;
     margin-right: 315px;
     margin-left: 50px;
-    min-height: 68px;
+    min-height: 60px;
 
     &__item {
       margin-right: 36px;
     }
   }
 
-  .site-list__item a {
+  .site-list a {
+    padding: 0;
+    border-top: none;
     .font(15px, 24px);
     color: @color-black;
   }
@@ -52,7 +56,28 @@
     margin-right: 80px;
   }
 
-  .site-list__item a {
+  .site-list__item {
+      position: relative;
+      padding-right: 36px;
+      min-height: 88px;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 1px;
+      height: 100%;
+      background-color: @color-grey;
+    }
+
+    &:last-child::before {
+      width: 0;
+    }
+  }
+
+  .site-list a {
+    padding: 31px 0;
     .font(17px, 24px);
   }
 }
