--- a/source/less/layout/page-footer.less
+++ b/source/less/layout/page-footer.less
@@ -12,6 +12,7 @@
 
 @media (min-width: @tablet-width) {
   .page-footer {
+    margin-top: 63px;
     width: 768px;
   }
 
@@ -26,6 +27,7 @@
 
 @media (min-width: @desktop-width) {
   .page-footer {
+    margin-top: 104px;
     width: 1150px;
   }
 
