--- a/source/less/layout/page-main.less
+++ b/source/less/layout/page-main.less
@@ -18,7 +18,7 @@
     position: absolute;
     left: 0;
     bottom: -41px;
-    height: 6px;
+    height: 7px;
     width: 100%;
     .background("../img/bg-zigzag-line.svg");
     background-size: cover;
@@ -33,7 +33,7 @@
     position: absolute;
     left: 0;
     bottom: -50px;
-    height: 6px;
+    height: 7px;
     width: 100%;
     .background("../img/bg-zigzag-line.svg");
     background-size: cover;
@@ -54,7 +54,7 @@
 
   .popular::before {
     bottom: -50px;
-    height: 15px;
+    height: 16px;
   }
 
   .reviews::before {
@@ -70,6 +70,7 @@
 
   .page-main__wrapper-background {
     min-height: 746px;
+    margin-top: -60px;
     .background("../img/hero-desktop@1x.jpg");
     background-position: 50% 0;
   }
