--- a/source/less/mixins_variables.less
+++ b/source/less/mixins_variables.less
@@ -33,12 +33,39 @@
   list-style: none;
 }
 
-body {
-  background: url("../img/mishka-index-mobile_menu.jpg") no-repeat 50% 0;
+/*body {
+  background: url("../img/mishka-catalog-mobile.jpg") no-repeat 50% 0;
   background-size: 320px auto;
   min-height: 750px;
 }
-@media (min-width: @tablet-width) {
+/*body > * {
+  outline: 2px solid rgba(0, 0 , 150, 0.4);
+}
+
+body > * > * {
+  outline: 2px solid rgba(0, 0 , 255, 0.4);
+}
+
+body > * > * > * {
+  outline: 2px solid rgba(0, 150 , 255, 0.4);
+}
+
+body > * > * > * > * {
+  outline: 2px solid rgba(0, 255 , 255, 0.4);
+}
+
+body > * > * > * > * > * {
+  outline: 2px solid rgba(150, 255 , 255, 0.4);
+}
+
+body > * > * > * > * > * > * {
+  outline: 2px solid red;
+}
+
+body > * > * > * > * > * > * > * {
+  outline: 2px solid rgba(0, 150 , 255, 0.4);
+}*/
+/*@media (min-width: @tablet-width) {
   body {
     background: url("../img/mishka-catalog-tablet.jpg") no-repeat 50% 0;
     background-size: 768px auto;
@@ -49,4 +76,4 @@ body {
     background: url("../img/mishka-catalog-desktop.jpg") no-repeat 50% 0;
     background-size: 1150px auto;
   }
-}
+}*/
