--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -77,7 +77,7 @@
 }
 
 .catalog-item__btn-add {
-  height: 19px;
+  height: auto;
   width: 20px;
 
   & svg {
@@ -164,11 +164,6 @@
     padding-left: 5px;
     .font(17px, 24px);
   }
-
-  .catalog-item__btn-add {
-    top: 2px;
-    right: 6px;
-  }
 }
 
 @media (min-width: @desktop-width) {
@@ -222,5 +217,13 @@
   .catalog-item__wrapper-desc {
     width: 307px;
     min-height: 184px;
+  }
+
+  .catalog-item__title {
+    margin-top: 21px;
+  }
+
+  .catalog-item__price {
+    padding-left: 0;
   }
 }
