--- a/source/less/blocks/contact.less
+++ b/source/less/blocks/contact.less
@@ -48,7 +48,8 @@
 }
 
 .contact__map {
-  margin-bottom: 43px;
+  margin-top: 7px;
+  margin-bottom: 35px;
 }
 
 .contact__write {
@@ -100,6 +101,7 @@
     content: url("../img/map-tablet@1x.jpg");
     width: 768px;
     height: 457px;
+    margin-top: 0;
     margin-bottom: 52px;
   }
 
