--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -95,6 +95,10 @@
     height: 455px;
   }
 
+  .video__production {
+    margin-bottom: 30px;
+  }
+
   .video__title {
     margin-top: 4px;
     padding-left: 106px;
@@ -139,23 +143,24 @@
 
   .video__title {
     padding-top: 91px;
-    padding-left: 77px;
-    padding-right: 35px;
+    padding-left: 70px;
+    padding-right: 41px;
     width: 350px;
 
     &::after {
       top: 37px;
-      left: 79px;
+      left: 71px;
     }
   }
 
   .video__text {
     margin-bottom: 48px;
-    padding-left: 77px;
+    padding-left: 70px;
     width: 350px;
   }
 
   .video__order {
+    margin-left: 71px;
     width: 230px;
   }
 }
