доработка по замечаниям

--- a/source/less/blocks/catalog-menu.less
+++ b/source/less/blocks/catalog-menu.less
@@ -91,7 +91,7 @@
       position: absolute;
       left: 0;
       bottom: 0;
-      height: 14px;
+      height: 18px;
       width: 100%;
       .background("../img/bg-zigzag-fill.svg");
       background-size: cover;
@@ -107,16 +107,17 @@
   }
 
   .catalog-menu__item {
-    padding-top: 13px;
+    padding-top: 27px;
     padding-left: 36px;
+    min-height: 120px;
     .font(20px, 30px);
 
     &--decoration svg {
-      top: 16px;
+      top: 30px;
     }
 
     &--toys svg {
-      top: 17px;
+      top: 31px;
       right: 34px;
     }
   }
