--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -33,6 +33,11 @@
   padding: 0 30px;
   .font(17px, 24px);
   color: @color-black;
+
+  & a {
+    .font(17px, 24px);
+    color: @color-black;
+  }
 }
 
 .catalog-item__description {
