--- a/source/less/blocks/footer-logo.less
+++ b/source/less/blocks/footer-logo.less
@@ -5,6 +5,7 @@
 @media (min-width: @tablet-width) {
   .footer-logo {
     padding-right: 78px;
+    padding-bottom: 10px;
   }
 
   .footer-logo__logo-image {
