--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -107,6 +107,7 @@
     position: absolute;
     bottom: 3px;
     right: 50px;
+    z-index: 2;
     display: block;
     .font(15px, 24px);
     font-weight: 400;
