--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -33,6 +33,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    z-index: 2;
     margin-right: 315px;
     margin-left: 50px;
     min-height: 60px;
