--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,6 +1,6 @@
 .social {
-  padding-top: 30px;
-  padding-bottom: 15px;
+  padding-top: 23px;
+  padding-bottom: 24px;
   border-bottom: 1px solid @color-grey;
 }
 
@@ -10,6 +10,7 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  align-items: baseline;
   width: 180px;
   margin: 0 auto;
 }
@@ -29,6 +30,7 @@
 
 @media (min-width: @tablet-width) {
   .social {
+    padding: 0;
     border-bottom: none;
   }
 }
