--- a/source/less/layout/page-main.less
+++ b/source/less/layout/page-main.less
@@ -76,16 +76,20 @@
   }
 
   .popular::before {
-    bottom: -96px;
-    height: 24px;
+    bottom: -92px;
+    height: 21px;
     left: 50px;
     width: calc(100% - 100px);
+    background-repeat: repeat;
+    background-position-x: -27px;
   }
 
   .reviews::before {
-    bottom: -91px;
-    height: 24px;
+    bottom: -88px;
+    height: 21px;
     left: 50px;
     width: calc(100% - 100px);
+    background-repeat: repeat;
+    background-position-x: -25px;
   }
 }
