--- a/source/less/blocks/catalog-menu.less
+++ b/source/less/blocks/catalog-menu.less
@@ -11,20 +11,10 @@
 
   width: 100%;
   min-height: 103px;
-  padding: 28px 30px;
 
   .font(19px, 24px);
   text-align: left;
   color: @color-white;
-
-  &:hover,
-  &:focus svg {
-    opacity: 0.7;
-  }
-
-  &:active svg {
-    opacity: 0.3;
-  }
 
   &--decoration {
     background-color: @color-green;
@@ -79,7 +69,19 @@
 
 .catalog-menu__link {
   display: block;
-  width: 120px;
+  padding: 28px 30px;
+  padding-top: 26px;
+  padding-right: 120px;
+  width: 100%;
+  
+  &:hover,
+  &:focus svg {
+    opacity: 0.7;
+  }
+
+  &:active svg {
+    opacity: 0.3;
+  }
 }
 
 @media (min-width: @tablet-width) {
@@ -107,8 +109,6 @@
   }
 
   .catalog-menu__item {
-    padding-top: 27px;
-    padding-left: 36px;
     min-height: 120px;
     .font(20px, 30px);
 
@@ -120,6 +120,11 @@
       top: 31px;
       right: 34px;
     }
+  }
+
+  .catalog-menu__link {
+    padding-top: 27px;
+    padding-left: 36px;
   }
 }
 
@@ -133,8 +138,6 @@
   }
 
   .catalog-menu__item {
-    padding-top: 27px;
-
     &--decoration svg {
       top: 30px;
     }
@@ -142,5 +145,10 @@
     &--toys svg {
       top: 32px;
     }
+  }
+
+  .catalog-menu__link {
+    padding-top: 27px;
+    padding-right: 310px;
   }
 }
