--- a/source/less/blocks/offer-list.less
+++ b/source/less/blocks/offer-list.less
@@ -17,6 +17,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    z-index: 2;
     margin-right: 80px;
     margin-left: 50px;
     min-height: 60px;
