Добавление адаптивной графики

--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -56,6 +56,11 @@
   }
 }
 
+.catalog-item__img {
+  height: 150px;
+  width: 260px;
+}
+
 .catalog-item__price-wrapper {
   position: relative;
   display: flex;
@@ -125,18 +130,6 @@
     height: 332px;
   }
 
-  .catalog-item__img-hare {
-    content: url("../img/photo-hare-tablet@1x.jpg");
-  }
-
-  .catalog-item__img-bowl {
-    content: url("../img/photo-bowl-tablet@1x.jpg");
-  }
-
-  .catalog-item__img-toys {
-    content: url("../img/photo-toys-tablet@1x.jpg");
-  }
-
   .catalog-item__wrapper-desc {
     display: flex;
     flex-direction: column;
@@ -201,18 +194,6 @@
   .catalog-item__img {
     width: 314px;
     height: 462px;
-  }
-
-  .catalog-item__img-hare {
-    content: url("../img/photo-hare-desktop@1x.jpg");
-  }
-
-  .catalog-item__img-bowl {
-    content: url("../img/photo-bowl-desktop@1x.jpg");
-  }
-
-  .catalog-item__img-toys {
-    content: url("../img/photo-toys-desktop@1x.jpg");
   }
 
   .catalog-item__description {
