--- a/source/less/blocks/contact.less
+++ b/source/less/blocks/contact.less
@@ -50,6 +50,8 @@
 .contact__map {
   margin-top: 7px;
   margin-bottom: 35px;
+  width: 320px;
+  height: 457px;
 }
 
 .contact__write {
@@ -98,7 +100,6 @@
   }
 
   .contact__map {
-    content: url("../img/map-tablet@1x.jpg");
     width: 768px;
     height: 457px;
     margin-top: 0;
@@ -148,7 +149,6 @@
   }
 
   .contact__map {
-    content: url("../img/map-desktop@1x.jpg");
     position: absolute;
     top: 70px;
     right: 0;
