--- a/source/less/mixins_variables.less
+++ b/source/less/mixins_variables.less
@@ -1,10 +1,10 @@
 @tablet-width: 768px;
 @desktop-width: 1150px;
 @mobile-width-only: 767px;
-
+@retina-dpi: 144dpi;
+@retina-dppx: 1.5dppx;
 
 @font-text: "Open-sans", "Arial", sans-serif;
-
 
 @color-white: #ffffff;
 @color-white-dark: #f1f1f1;
