--- a/source/less/layout/page-main.less
+++ b/source/less/layout/page-main.less
@@ -8,6 +8,11 @@
   background-color: @color-white-dark;
   .background("../img/hero-mobile@1x.jpg");
   background-position: 50% 0;
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("img/hero-mobile@2x.jpg");
+    background-size: 322px auto;
+  }
 }
 
 .popular {
@@ -48,8 +53,12 @@
   .page-main__wrapper-background {
     min-height: 744px;
     margin-top: -63px;
-    .background("../img/hero-tablet@1x.jpg");
-    background-position: 50% 0;
+    background-image: url("img/hero-tablet@1x.jpg");
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("img/hero-tablet@2x.jpg");
+      background-size: 772px auto;
+    }
   }
 
   .popular::before {
@@ -71,8 +80,12 @@
   .page-main__wrapper-background {
     min-height: 746px;
     margin-top: -60px;
-    .background("../img/hero-desktop@1x.jpg");
-    background-position: 50% 0;
+    background-image: url("img/hero-desktop@1x.jpg");
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("img/hero-desktop@2x.jpg");
+      background-size: 1150px auto;
+    }
   }
 
   .popular::before {
