Доработка адаптивной графики

--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -88,7 +88,7 @@
     background-size: 350px 457px;
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-      background-image: url("img/review@2x.jpg");
+      background-image: url("../img/review@2x.jpg");
     }
   }
 
