--- a/source/less/layout/page-main.less
+++ b/source/less/layout/page-main.less
@@ -10,7 +10,7 @@
   background-position: 50% 0;
 
   @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-    background-image: url("img/hero-mobile@2x.jpg");
+    background-image: url("../img/hero-mobile@2x.jpg");
     background-size: 322px auto;
   }
 }
@@ -53,10 +53,10 @@
   .page-main__wrapper-background {
     min-height: 744px;
     margin-top: -63px;
-    background-image: url("img/hero-tablet@1x.jpg");
+    background-image: url("../img/hero-tablet@1x.jpg");
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-      background-image: url("img/hero-tablet@2x.jpg");
+      background-image: url("../img/hero-tablet@2x.jpg");
       background-size: 772px auto;
     }
   }
@@ -80,10 +80,10 @@
   .page-main__wrapper-background {
     min-height: 746px;
     margin-top: -60px;
-    background-image: url("img/hero-desktop@1x.jpg");
+    background-image: url("../img/hero-desktop@1x.jpg");
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-      background-image: url("img/hero-desktop@2x.jpg");
+      background-image: url("../img/hero-desktop@2x.jpg");
       background-size: 1150px auto;
     }
   }
