--- a/source/less/layout/page-footer.less
+++ b/source/less/layout/page-footer.less
@@ -19,8 +19,8 @@
   .page-footer__wrapper {
     display: flex;
     justify-content: space-between;
-    align-items: center;
     padding: 0 50px;
+    padding-top: 52px;
     min-height: 143px;
   }
 }
@@ -32,7 +32,6 @@
   }
 
   .page-footer__wrapper {
-    padding: 0 50px;
     min-height: 143px;
   }
 }
