--- a/source/less/blocks/catalog-menu.less
+++ b/source/less/blocks/catalog-menu.less
@@ -91,12 +91,12 @@
     &::after {
       content: "";
       position: absolute;
-      left: 0;
+      left: -10vw;
       bottom: 0;
       height: 18px;
-      width: 100%;
-      .background("../img/bg-zigzag-fill.svg");
-      background-size: cover;
+      width: 110vw;
+      background-image: url(../img/bg-zigzag-fill.svg);
+      background-repeat: repeat;
     }
   }
 
