--- a/source/less/base/base.less
+++ b/source/less/base/base.less
@@ -14,6 +14,8 @@ body {
   font-family: @font-text;
   font-weight: 700;
   letter-spacing: normal;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 img {
