--- a/source/less/layout/page-footer.less
+++ b/source/less/layout/page-footer.less
@@ -5,13 +5,27 @@
 }
 
 .page-footer__wrapper {
+  position: relative;
   padding: 0 30px;
-
   background-color: @color-white-dark;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -2;
+    margin-left: calc(50% - 50vw);
+    margin-right: calc(50% - 50vw);
+    background-color: @color-white-dark;
+  }
 }
 
 @media (min-width: @tablet-width) {
   .page-footer {
+    min-height: 144px;
     margin-top: 55px;
     width: 768px;
   }
