--- a/source/less/mixins_variables.less
+++ b/source/less/mixins_variables.less
@@ -8,6 +8,7 @@
 
 @color-white: #ffffff;
 @color-white-dark: #f1f1f1;
+@color-white-middle: #f9f9f9;
 @color-black: #000000;
 @color-text: #444444;
 @color-grey: #ececec;
