доработка для тревиса

--- a/source/less/blocks/catalog-menu.less
+++ b/source/less/blocks/catalog-menu.less
@@ -95,7 +95,7 @@
       bottom: 0;
       height: 18px;
       width: 110vw;
-      background-image: url(../img/bg-zigzag-fill.svg);
+      background-image: url("../img/bg-zigzag-fill.svg");
       background-repeat: repeat;
     }
   }
