--- a/source/less/blocks/page-title.less
+++ b/source/less/blocks/page-title.less
@@ -60,7 +60,7 @@
       bottom: 0;
       height: 14px;
       width: 110vw;
-      background-image: url(../img/bg-zigzag-fill.svg);
+      background-image: url("../img/bg-zigzag-fill.svg");
       background-repeat: repeat;
     }
   }
