--- a/source/less/blocks/catalog-menu.less
+++ b/source/less/blocks/catalog-menu.less
@@ -73,6 +73,9 @@
   padding-top: 26px;
   padding-right: 120px;
   width: 100%;
+  .font(19px, 24px);
+  text-align: left;
+  color: @color-white;
 
   &:hover,
   &:focus svg {
@@ -94,7 +97,7 @@
       left: -20vw;
       bottom: 0;
       height: 18px;
-      width: 110vw;
+      width: 120vw;
       background-image: url("../img/bg-zigzag-fill.svg");
       background-repeat: repeat;
     }
