--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -55,10 +55,12 @@
 
   &:hover,
   &:focus {
+    transform: scale(1.2);
     opacity: 1;
   }
 
   &:active {
+    transform: scale(0.8);
     opacity: 0.3;
   }
 }
