--- a/source/less/blocks/contact.less
+++ b/source/less/blocks/contact.less
@@ -52,6 +52,18 @@
   margin-bottom: 35px;
   width: 320px;
   height: 457px;
+  .background ("../img/map-mobile@1x.jpg");
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("../img/map-mobile@2x.jpg");
+    background-size: 320px auto;
+  }
+}
+
+.contact__map-iframe {
+  width: 100%;
+  margin: 0 auto;
+  border: none;
 }
 
 .contact__write {
@@ -104,7 +116,18 @@
     height: 457px;
     margin-top: 0;
     margin-bottom: 52px;
+    .background ("../img/map-tablet@1x.jpg");
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/map-tablet@2x.jpg");
+      background-size: 768px auto;
+    }
   }
+
+.contact__map-iframe {
+  width: 768px;
+  height: 457px;
+}
 
   .contact__write {
     width: 230px;
@@ -155,7 +178,18 @@
     width: 525px;
     height: 457px;
     margin-bottom: 52px;
+    .background ("../img/map-desktop@1x.jpg");
+
+      @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/map-desktop@2x.jpg");
+      background-size: 525px auto;
+    }
   }
+
+.contact__map-iframe {
+  width: 525px;
+  height: 457px;
+}
 
   .contact__write {
     margin: 0;
