--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -6,7 +6,7 @@
   padding-bottom: 15px;
 }
 
-.copyright__text {
+/*.copyright__text {
   padding-top: 14px;
   .font(19px, 18px);
   color: @color-black;
@@ -17,24 +17,35 @@
     width: 260px;
     background-color: @color-white-dark;
   }
-}
+}*/
 
 .copyright__link {
-  padding-top: 9px;
+  /*padding-top: 9px;*/
   margin: 0;
   min-height: 34px;
-  width: 27px;
+  width: 180px; /*27px;*/
+  .font(19px, 18px);
+  text-transform: initial;
   border: none;
   color: rgba(@color-black, 1);
 
-  svg {
-    fill: @color-green-alternative-hover;
+  &::before {
+    content: "";
+    height: 1px;
+    width: 260px;
+    background-color: @color-white-dark;
   }
 
-  &:hover,
+  svg {
+    min-height: 34px;
+    width: 27px;
+    fill: @color-green;
+  }
+
+  /*&:hover,
   &:focus {
     background-color: transparent;
-  }
+  }*/
 
   &:hover svg,
   &:focus svg {
@@ -53,10 +64,10 @@
   }
 
   .copyright__text {
-    padding-top: 11px;
+    padding-top: 9px;
   }
 
   .copyright__link {
-    padding-top: 6px;
+    padding-top: 4px;
   }
 }
