--- a/source/less/blocks/form-order.less
+++ b/source/less/blocks/form-order.less
@@ -42,13 +42,13 @@
   position: relative;
   display: block;
   padding-left: 62px;
-  .font (19px, 18px);
-  color: @color-text;
+  .font (17px, 18px);
+  color: @color-black;
 }
 
 .form-order__text {
   margin: 0;
-  margin-top: 9px;
+  margin-top: 13px;
   margin-bottom: 30px;
   padding: 0;
   .font (14px, 16px);
@@ -57,5 +57,76 @@
 }
 
 .form-order__btn {
-  padding-top: 0;
+  padding: 0;
+  min-height: 53px;
+}
+
+@media (min-width: @tablet-width) {
+  .form-order {
+    padding: 0;
+  }
+
+  .form-order__fieldset {
+    padding: 0 50px;
+  }
+
+  .form-order__legend {
+    width: 167px;
+
+    &::after {
+      display: none;
+    }
+  }
+
+  .form-order__desc {
+    margin-top: 74px;
+    padding: 0 50px;
+    .font(17px, 30px);
+  }
+
+  .form-order__label {
+    .font (19px, 18px);
+  }
+
+  .form-order__wrapper-phone {
+    padding-bottom: 15px;
+    background-color: @color-white-dark;
+  }
+
+  .form-order-wrapper-btn {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    margin: 0 50px;
+    padding-top: 2px;
+  }
+
+  .form-order__btn {
+    margin: 0;
+    width: 230px;
+    min-height: 52px;
+    .font (17px, 16px);
+    font-weight: 700;
+  }
+
+  .form-order__text {
+    margin: 0;
+    margin-top: 9px;
+    .font (17px, 30px);
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form-order__desc {
+    margin-top: 124px;
+    padding: 0 225px;
+  }
+
+  .form-order__legend {
+    width: 175px;
+  }
+
+  .form-order-wrapper-btn {
+    padding: 0 175px;
+  }
 }
