--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -1,3 +1,138 @@
 .modal {
+  position: fixed;
   display: none;
+  color: @color-black;
+
+  background-color: @color-white;
+  box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
+  border: 1px solid #c6c6c6;
+  z-index: 10;
+}
+
+.modal-show {
+  display: block;
+}
+
+.modal--write-us {
+  top: 50px;
+  left: 50%;
+  width: 320px;
+  margin-left: -160px;
+  padding: 30px;
+  padding-bottom: 45px;
+}
+
+.modal__title {
+  margin: 0;
+  padding: 0 55px;
+  .font(25px, 30px);
+  color: @color-black;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.modal__text {
+  margin-top: 13px;
+  margin-bottom: 23px;
+  .font(15px, 30px);
+  font-weight: 400;
+  color: @color-text;
+  text-align: center;
+}
+
+.modal__list {
+  .list-reset ();
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 32px;
+}
+
+.modal__item {
+  width: 82px;
+  height: 52px;
+  padding-top: 17px;
+  .font(17px, 16px);
+  color: @color-text;
+  text-align: center;
+  border: 2px solid rgba(@color-text, 0.1);
+
+  &:hover,
+  &:focus {
+    border: 2px solid rgba(@color-text, 0.3);
+  }
+
+  &:active {
+    border: 2px solid @color-green;
+  }
+}
+
+.modal__item--active {
+  border: 2px solid @color-green;
+}
+
+.modal__btn {
+  border-color: @color-green;
+  .font(17px, 16px);
+  color: @color-white;
+  background-color: @color-green;
+
+  &:hover,
+  &:focus {
+    border-color: @color-text;
+  }
+
+  &:active {
+    border-color: @color-text;
+  }
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 3;
+  display: none;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(@color-white, 0.9);
+}
+
+.overlay-show {
+  display: block;
+}
+
+
+@media (min-width: @tablet-width) {
+  .modal--write-us {
+    width: 566px;
+    min-height: 337px;
+    margin-left: -280px;
+    padding: 34px 106px;
+  }
+
+  .modal__title {
+    padding: 0;
+    .font(30px, 57px);
+  }
+
+  .modal__text {
+    .font(17px, 30px);
+  }
+
+  .modal__item {
+    width: 113px;
+    padding-top: 16px;
+  }
+
+  .modal__list {
+    margin-bottom: 30px;
+  }
+
+  .modal__btn {
+    width: 350px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+
 }
