--- a/source/less/mixins_variables.less
+++ b/source/less/mixins_variables.less
@@ -16,6 +16,7 @@
 @color-green-hover: #59d5bc;
 @color-green-alternative: #56c3b2;
 @color-green-alternative-hover: #46c1ae;
+@color-green-input-active: #62d1ba;
 
 
 .font (@size, @line) {
@@ -35,7 +36,7 @@
 }
 
 /*body {
-  background: url("../img/mishka-index-mobile.jpg") no-repeat 50% 0;
+  background: url("../img/mishka-form-mobile.jpg") no-repeat 50% 0;
   background-size: 320px auto;
   min-height: 750px;
 }
@@ -68,13 +69,13 @@ body > * > * > * > * > * > * > * {
 }*/
 /*@media (min-width: @tablet-width) {
   body {
-    background: url("../img/mishka-index-tablet.jpg") no-repeat 50% 0;
+    background: url("../img/mishka-form-tablet.jpg") no-repeat 50% 0;
     background-size: 768px auto;
   }
 }
 @media (min-width: @desktop-width) {
   body {
-    background: url("../img/mishka-index-desktop.jpg") no-repeat 50% 0;
+    background: url("../img/mishka-form-desktop.jpg") no-repeat 50% 0;
     background-size: 1150px auto;
   }
 }*/
