--- a/source/less/blocks/catalog-menu.less
+++ b/source/less/blocks/catalog-menu.less
@@ -1,7 +1,3 @@
-.catalog-menu__wrapper {
-  margin: 0 auto;
-}
-
 .catalog-menu__list {
   .list-reset();
 }
@@ -104,7 +100,8 @@
   }
 
   .catalog-menu__wrapper {
-    width: 668px;
+    /*width: 668px;*/
+		padding: 0 50px;
   }
 
   .catalog-menu__list {
@@ -132,10 +129,6 @@
 }
 
 @media (min-width: @desktop-width) {
-  .catalog-menu__wrapper {
-    width: 1050px;
-  }
-
   .catalog-menu__list {
     min-height: 120px;
   }
