--- a/source/less/blocks/contact.less
+++ b/source/less/blocks/contact.less
@@ -1,5 +1,5 @@
 .contact {
-  width: 320px;
+  /*width: 320px;*/
   margin: 40px auto;
 }
 
@@ -73,7 +73,7 @@
 @media (min-width: @tablet-width) {
   .contact {
     margin-bottom: 57px;
-    width: 768px;
+    /*width: 768px;*/
   }
 
   .contact__wrapper {
@@ -83,6 +83,7 @@
   .contact__title {
     position: relative;
     padding-top: 60px;
+    margin-left: -5px;
     margin-bottom: 49px;
     .font(43px, 50px);
 
@@ -138,8 +139,9 @@
   .contact {
     position: relative;
     margin-bottom: 105px;
-    padding-left: 171px;
-    width: 1050px;
+    padding-right: 50px;
+    padding-left: 221px;
+    /*width: 1050px;*/
   }
 
   .contact__wrapper {
@@ -153,7 +155,7 @@
 
     &::after {
       top: 131px;
-      left: -108px;
+      left: -103px;
     }
   }
 
@@ -174,7 +176,7 @@
   .contact__map {
     position: absolute;
     top: 70px;
-    right: 0;
+    right: 50px;
     width: 525px;
     height: 457px;
     margin-bottom: 52px;
