--- a/source/less/blocks/form-order.less
+++ b/source/less/blocks/form-order.less
@@ -9,6 +9,10 @@
   overflow: hidden;
 }
 
+.form-order__fieldset--color {
+  background: @color-white-dark;
+}
+
 .form-order__legend {
   position: relative;
   margin: 0;
@@ -90,15 +94,14 @@
 
   .form-order__wrapper-phone {
     padding-bottom: 15px;
-    background-color: @color-white-dark;
   }
 
   .form-order-wrapper-btn {
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
-    margin: 0 50px;
-    padding-top: 2px;
+    padding: 0 50px;
+    margin-top: 53px;
   }
 
   .form-order__btn {
