--- a/source/less/blocks/info.less
+++ b/source/less/blocks/info.less
@@ -4,8 +4,9 @@
 }
 
 .info__wrapper {
-  width: 260px;
-  margin: 0 auto;
+  /*width: 260px;
+  margin: 0 auto;*/
+  padding: 0 30px;
 }
 
 .info__title {
@@ -110,7 +111,8 @@
   }
 
   .info__wrapper {
-    width: 668px;
+    /*width: 668px;*/
+    padding: 0 50px;
   }
 
   .info__title {
@@ -163,8 +165,9 @@
   }
 
   .info__wrapper {
-    width: 1050px;
-    padding: 0 174px;
+    /*width: 1050px;
+    padding: 0 174px;*/
+    padding: 0 224px;
   }
 
   .info__title {
