--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -5,8 +5,9 @@
 
 .reviews__wrapper {
   position: relative;
-  width: 260px;
-  margin: 0 auto;
+  /*width: 260px;
+  margin: 0 auto;*/
+  padding: 0 30px;
 }
 
 .reviews__title {
@@ -93,8 +94,9 @@
   }
 
   .reviews__wrapper {
-    width: 668px;
+    /*width: 668px;*/
     min-height: 457px;
+    padding: 0 50px;
   }
 
   .reviews__title {
@@ -129,12 +131,12 @@
   .reviews__nav {
     position: absolute;
     bottom: 48px;
-    right: 0;
-    width: 169px;
+    right: 48px;
+    width: 175px;
   }
 
   .reviews__btn {
-    width: 80px;
+    width: 83px;
     border: none;
   }
 }
@@ -147,8 +149,9 @@
   }
 
   .reviews__wrapper {
-    padding-left: 173px;
-    width: 1050px;
+    padding-right: 50px;
+    padding-left: 223px;
+    /*width: 1050px;*/
   }
 
   .reviews__title {
