--- a/source/less/layout/page-main.less
+++ b/source/less/layout/page-main.less
@@ -1,6 +1,6 @@
 .page-main {
-  width: 320px;
-  margin: 0 auto;
+  /*width: 320px;
+  margin: 0 auto;*/
 }
 
 .page-main__wrapper-background {
@@ -46,9 +46,9 @@
 }
 
 @media (min-width: @tablet-width) {
-  .page-main {
+  /*.page-main {
     width: 768px;
-  }
+  }*/
 
   .page-main__wrapper-background {
     position: relative;
@@ -87,9 +87,9 @@
 }
 
 @media (min-width: @desktop-width) {
-  .page-main {
+  /*.page-main {
     width: 1150px;
-  }
+  }*/
 
   .page-main__wrapper-background {
     min-height: 746px;
