--- a/source/less/mixins_variables.less
+++ b/source/less/mixins_variables.less
@@ -35,8 +35,8 @@
   list-style: none;
 }
 
-/*body {
-  background: url("../img/mishka-form-mobile.jpg") no-repeat 50% 0;
+body {
+  background: url("../pixel/mishka-index-mobile.jpg") no-repeat 50% 0;
   background-size: 320px auto;
   min-height: 750px;
 }
@@ -67,15 +67,15 @@ body > * > * > * > * > * > * {
 body > * > * > * > * > * > * > * {
   outline: 2px solid rgba(0, 150 , 255, 0.4);
 }*/
-/*@media (min-width: @tablet-width) {
+@media (min-width: @tablet-width) {
   body {
-    background: url("../img/mishka-form-tablet.jpg") no-repeat 50% 0;
+    background: url("../pixel/mishka-index-tablet.jpg") no-repeat 50% 0;
     background-size: 768px auto;
   }
 }
 @media (min-width: @desktop-width) {
   body {
-    background: url("../img/mishka-form-desktop.jpg") no-repeat 50% 0;
+    background: url("../pixel/mishka-index-desktop.jpg") no-repeat 50% 0;
     background-size: 1150px auto;
   }
-}*/
+}
