--- a/source/less/blocks/color.less
+++ b/source/less/blocks/color.less
@@ -75,21 +75,7 @@
     position: relative;
     display: flex;
     justify-content: flex-start;
-    margin-bottom: 50px;
-    background: @color-white-dark;
-
-    &::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      z-index: -2;
-      margin-left: calc(50% - 50vw);
-      margin-right: calc(50% - 50vw);
-      background-color: @color-white-dark;
-    }
+    padding: 0 50px;
   }
 
   .color__title {
