--- a/source/less/blocks/textarea.less
+++ b/source/less/blocks/textarea.less
@@ -69,7 +69,7 @@
   .textarea {
     display: flex;
     justify-content: flex-start;
-    margin: 50px 0;
+    margin: 47px auto;
     padding: 0 50px;
   }
 
