--- a/source/less/layout/page-footer.less
+++ b/source/less/layout/page-footer.less
@@ -1,33 +1,20 @@
 .page-footer {
   min-height: 160px;
-  width: 320px;
-  margin: 0 auto;
+  /*width: 320px;
+  margin: 0 auto;*/
+  background-color: @color-white-dark;
 }
 
 .page-footer__wrapper {
   position: relative;
   padding: 0 30px;
-  background-color: @color-white-dark;
-
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: -2;
-    margin-left: calc(50% - 50vw);
-    margin-right: calc(50% - 50vw);
-    background-color: @color-white-dark;
-  }
 }
 
 @media (min-width: @tablet-width) {
   .page-footer {
     min-height: 144px;
     margin-top: 50px;
-    width: 768px;
+    /*width: 768px;*/
   }
 
   .page-footer__wrapper {
@@ -42,7 +29,7 @@
 @media (min-width: @desktop-width) {
   .page-footer {
     margin-top: 50px;
-    width: 1150px;
+    /*width: 1150px;*/
   }
 
   .page-footer__wrapper {
