--- a/source/less/style.less
+++ b/source/less/style.less
@@ -12,6 +12,7 @@
 @import "layout/page-header.less";
 @import "layout/page-footer.less";
 //
+@import "blocks/container.less";
 @import "blocks/header-logo.less";
 @import "blocks/main-nav.less";
 @import "blocks/site-list.less";
