--- a/source/less/layout/page-header.less
+++ b/source/less/layout/page-header.less
@@ -1,5 +1,5 @@
 .page-header {
-  position: relative;
+  /*position: relative;*/
   min-height: 80px;
 }
 
@@ -9,19 +9,19 @@
   }
 
   .page-header__logo {
-    position: absolute;
-    top: 0;
-    left: 50px;
+    width: 112px;
+    height: 46px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .page-header {
     min-height: 89px;
+    padding: 0 50px;
   }
 
   .page-header__logo {
-    position: absolute;
-    left: calc(50% - 74px);
+    /*position: absolute;
+    left: calc(50% - 74px);*/
   }
 }
