--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,6 +1,6 @@
-.main-nav__wrapper {
-  width: 320px;
-  margin: 0 auto;
+.main-nav {
+  display: flex;
+  flex-direction: column;
 }
 
 .main-nav__toggle {
@@ -39,6 +39,10 @@
 
 .main-nav__delivery {
   display: none;
+  margin: 0;
+  .font(15px, 24px);
+  font-weight: 400;
+  color: @color-text;
 }
 
 @media (max-width: @mobile-width-only) {
@@ -59,19 +63,22 @@
     display: none;
   }
 
-  .main-nav--opened .main-nav__wrapper {
+  /*.main-nav--opened .main-nav__wrapper {*/
+  .main-nav--opened .site-list,
+  .main-nav--opened .user-list {
     position: static;
     top: 79px;
     right: 0;
     z-index: 10;
-    min-height: 306px;
   }
 
   .main-nav--nojs .main-nav__toggle {
     display: none;
   }
 
-  .main-nav--nojs .main-nav__wrapper {
+  /*.main-nav--nojs .main-nav__wrapper {*/
+  .main-nav--nojs .site-list,
+  .main-nav--nojs .user-list {
     position: static;
     min-height: 0;
   }
@@ -92,34 +99,46 @@
 }
 
 @media (min-width: @tablet-width) {
+  .main-nav {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
   .main-nav__toggle {
     display: none;
   }
 
-  .main-nav__wrapper {
-    display: flex;
-    flex-direction: column-reverse;
-    margin-bottom: 0;
-    width: 768px;
+  .main-nav__header {
+    align-self: flex-start;
+    /*margin-top: 22px;*/
+    padding: 0;
+    min-height: auto;
+    border-bottom: none;
   }
 
   .main-nav__delivery {
-    position: absolute;
+    /*position: absolute;
     bottom: 3px;
     right: 50px;
-    z-index: 2;
+    z-index: 2;*/
     display: block;
-    .font(15px, 24px);
-    font-weight: 400;
-    color: @color-text;
+    order: 2;
+    padding-top: 16px;
+    width: 270px;
+    text-align: right;
   }
 }
 
 @media (min-width: @desktop-width) {
-  .main-nav__wrapper {
+  /*.main-nav__wrapper {
     width: 1150px;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
+  }*/
+
+  .main-nav__header {
+    /*margin-top: 9px;*/
+    width: 163px;
   }
 }
