--- a/source/less/blocks/offer-list.less
+++ b/source/less/blocks/offer-list.less
@@ -15,12 +15,15 @@
 @media (min-width: @desktop-width) {
   .offer-list {
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: flex-start;
     align-items: center;
     z-index: 2;
     margin-right: 80px;
     margin-left: 50px;
     min-height: 60px;
+    width: 851px;
 
     &__item {
       margin-right: 62px;
