--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -31,12 +31,13 @@
   .site-list {
     order: 1;
     display: flex;
+    flex-direction: row;
     justify-content: flex-start;
     align-items: center;
     z-index: 2;
     margin-right: 315px;
-    margin-left: 50px;
     min-height: 60px;
+    width: 500px;
 
     &__item {
       margin-right: 36px;
@@ -53,8 +54,9 @@
 
 @media (min-width: @desktop-width) {
   .site-list {
-    order: 0;
-    margin-right: 80px;
+    order: -1;
+    margin-right: 50px;
+    width: 493px;
   }
 
   .site-list__item {
