--- a/source/less/blocks/catalog-menu.less
+++ b/source/less/blocks/catalog-menu.less
@@ -100,7 +100,8 @@
   }
 
   .catalog-menu__wrapper {
-		padding: 0 50px;
+    /*width: 668px;*/
+    padding: 0 50px;
   }
 
   .catalog-menu__list {
