--- a/source/less/blocks/info.less
+++ b/source/less/blocks/info.less
@@ -1,5 +1,5 @@
 .info {
-  margin-top: 30px;
+  margin-top: 71px;
   margin-bottom: 20px;
 }
 
@@ -12,6 +12,7 @@
 .info__title {
   margin-top: 25px;
   margin-bottom: 31px;
+  margin-left: -2px;
 
   .font(25px, 30px);
   color: @color-black;
@@ -117,6 +118,7 @@
 
   .info__title {
     margin-bottom: 50px;
+	margin-left: -5px;
     .font(43px, 50px);
   }
 
@@ -172,6 +174,7 @@
 
   .info__title {
     margin-bottom: 48px;
+	margin-left: -5px;
     .font(53px, 57px);
   }
 }
