--- a/source/less/blocks/page-title.less
+++ b/source/less/blocks/page-title.less
@@ -8,7 +8,7 @@
   text-align: center;
   color: @color-black;
 
-  &::before {
+  /*&::before {
     content: "";
     position: absolute;
     top: 0;
@@ -19,14 +19,14 @@
     margin-left: calc(50% - 50vw);
     margin-right: calc(50% - 50vw);
     background-color: @color-white-middle;
-  }
+  }*/
 
   &--color {
     background-color: @color-white-dark;
 
-    &::before {
+    /*&::before {
       background-color: @color-white-dark;
-    }
+    }*/
   }
 
   &--index {
@@ -44,7 +44,7 @@
     .font(43px, 50px);
 
     &--index {
-      padding-top: 158px;
+      padding-top: 156px;
       min-height: 630px;
       width: 500px;
     }
@@ -73,7 +73,7 @@
     .font(53px, 57px);
 
     &--index {
-      padding-top: 157px;
+      padding-top: 155px;
       min-height: 627px;
       width: 630px;
     }
