--- a/source/less/blocks/personal.less
+++ b/source/less/blocks/personal.less
@@ -16,7 +16,7 @@
 }
 
 .personal__item {
-  margin-bottom: 24px;
+  margin-bottom: 21px;
 
   :last-child {
     margin-bottom: 0;
@@ -30,8 +30,8 @@
 
 .personal__input {
   padding: 0;
-  padding-top: 14px;
-  padding-bottom: 14px;
+  padding-top: 15px;
+  padding-bottom: 16px;
   width: 100%;
   .font(17px, 18px);
   font-weight: 400;
@@ -42,19 +42,19 @@
   /*box-shadow: 0 2px 0 0 @color-black;*/
 
   &::-webkit-input-placeholder {
-    .font(19px, 18px);
+    .font(17px, 18px);
     font-weight: 400;
     opacity: 0.3;
   }
 
   &::-moz-placeholder {
-    .font(19px, 18px);
+    .font(17px, 18px);
     font-weight: 400;
     opacity: 0.3;
   }
 
   &::-ms-input-placeholder {
-    .font(19px, 18px);
+    .font(17px, 18px);
     font-weight: 400;
     opacity: 0.3;
   }
@@ -91,7 +91,7 @@
   .personal__item {
     display: flex;
     justify-content: flex-start;
-    margin-bottom: 25px;
+    margin-bottom: 23px;
   }
 
   .personal__input-label {
@@ -104,6 +104,18 @@
     padding-top: 9px;
     padding-left: 17px;
     .font(19px, 18px);
+
+    &::-webkit-input-placeholder {
+      .font(19px, 18px);
+    }
+
+    &::-moz-placeholder {
+      .font(19px, 18px);
+    }
+
+    &::-ms-input-placeholder {
+      .font(19px, 18px);
+    }
   }
 }
 
