--- a/source/less/blocks/popular.less
+++ b/source/less/blocks/popular.less
@@ -24,7 +24,7 @@
 
 .popular__text {
   margin: 0;
-  margin-top: 23px;
+  margin-top: 25px;
   margin-bottom: 16px;
   .font(15px, 24px);
   font-weight: 400;
@@ -64,6 +64,7 @@
   }
 
   .popular__title {
+    margin-left: -4px;
     .font(43px, 50px);
   }
 
@@ -108,24 +109,24 @@
   }
 
   .popular__wrapper-block-price {
-    margin-top: 25px;
+    margin-top: 26px;
     padding-right: 45px;
   }
 
   .popular__price {
-    margin-bottom: 34px;
+    margin-bottom: 35px;
     .font(20px, 24px);
   }
 
   .popular__wrapper-block-img {
-    margin-top: 49px;
+    margin-top: 57px;
     order: 1;
   }
 }
 
 @media (min-width: @desktop-width) {
   .popular {
-    margin-top: 73px;
+    margin-top: 74px;
   }
 
   .popular__wrapper {
