--- a/source/less/layout/page-footer.less
+++ b/source/less/layout/page-footer.less
@@ -20,6 +20,7 @@
   .page-footer__wrapper {
     display: flex;
     justify-content: space-between;
+	align-items: flex-start;
     padding: 0 50px;
     padding-top: 52px;
     min-height: 143px;
