--- a/source/less/blocks/catalog-menu.less
+++ b/source/less/blocks/catalog-menu.less
@@ -66,7 +66,7 @@
 .catalog-menu__link {
   display: block;
   padding: 28px 30px;
-  padding-top: 26px;
+  padding-top: 25px;
   padding-right: 120px;
   width: 100%;
   .font(19px, 24px);
@@ -125,6 +125,7 @@
   .catalog-menu__link {
     padding-top: 27px;
     padding-left: 36px;
+	.font(20px, 30px);
   }
 }
 
@@ -145,6 +146,6 @@
 
   .catalog-menu__link {
     padding-top: 27px;
-    padding-right: 310px;
+    padding-right: 320px;
   }
 }
