--- a/source/less/blocks/color.less
+++ b/source/less/blocks/color.less
@@ -1,3 +1,7 @@
+.color .form-order__legend::after {
+  width: 62%;
+}
+
 .color__title {
   margin-bottom: 24px;
 
@@ -59,8 +63,8 @@
 .color__input-checkbox:disabled:checked ~ .color__input-label::after {
   content: "";
   position: absolute;
-  top: 5px;
-  left: 7px;
+  top: 6px;
+  left: 5px;
   width: 27px;
   height: 25px;
   .background ("../img/icon-tick.svg");
@@ -75,7 +79,6 @@
     position: relative;
     display: flex;
     justify-content: flex-start;
-    padding: 0 50px;
   }
 
   .color__title {
