--- a/source/less/blocks/contact.less
+++ b/source/less/blocks/contact.less
@@ -9,6 +9,7 @@
 
 .contact__title {
   margin-bottom: 26px;
+  margin-left: -2px;
 
   .font(18px, 30px);
   color: @color-black;
@@ -48,8 +49,8 @@
 }
 
 .contact__map {
-  margin-top: 7px;
-  margin-bottom: 35px;
+  margin-top: 36px;
+  margin-bottom: 39px;
   width: 320px;
   height: 457px;
   .background ("../img/map-mobile@1x.jpg");
@@ -68,6 +69,7 @@
 
 .contact__write {
   width: 260px;
+  .font(18px, 19px);
 }
 
 @media (min-width: @tablet-width) {
@@ -84,7 +86,7 @@
     position: relative;
     padding-top: 60px;
     margin-left: -5px;
-    margin-bottom: 49px;
+    margin-bottom: 47px;
     .font(43px, 50px);
 
     &::after {
@@ -116,7 +118,7 @@
     width: 768px;
     height: 457px;
     margin-top: 0;
-    margin-bottom: 52px;
+    margin-bottom: 55px;
     .background ("../img/map-tablet@1x.jpg");
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
@@ -132,6 +134,7 @@
 
   .contact__write {
     width: 230px;
+	.font(17px, 18px);
   }
 }
 
