--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,8 +1,8 @@
 .copyright {
   display: flex;
   justify-content: space-between;
-  padding: 0 40px;
-  padding-top: 14px;
+  padding: 0 38px;
+  padding-top: 29px;
   padding-bottom: 15px;
 }
 
@@ -21,6 +21,7 @@
 
 .copyright__link {
   /*padding-top: 9px;*/
+  position: relative;
   margin: 0;
   min-height: 34px;
   width: 180px; /*27px;*/
@@ -37,6 +38,9 @@
   }
 
   svg {
+    position: absolute;
+    top: -6px;
+	right: -3px;
     min-height: 34px;
     width: 27px;
     fill: @color-green;
@@ -68,6 +72,15 @@
   }
 
   .copyright__link {
-    padding-top: 4px;
+	padding-top: 11px;
+
+	&::before {
+      display: none;
+    }
+
+    & svg {
+	  top: 6px;
+	  right: -2px;
+	}
   }
 }
