--- a/source/less/blocks/email.less
+++ b/source/less/blocks/email.less
@@ -1,6 +1,10 @@
 .email {
   position: relative;
-  margin-bottom: 38px;
+  margin-bottom: 33px;
+}
+
+.email .form-order__legend::after {
+  width: 69%;
 }
 
 .email__title {
@@ -14,8 +18,8 @@
 .email__label {
   content: "";
   position: absolute;
-  bottom: 1px;
-  right: 4px;
+  bottom: 6px;
+  right: 34px;
 
   & svg {
     width: 32px;
@@ -37,7 +41,7 @@
 .email__input {
   padding: 0;
   padding-top: 17px;
-  padding-bottom: 11px;
+  padding-bottom: 15px;
   width: 100%;
   .font(17px, 18px);
   font-weight: 400;
@@ -48,19 +52,19 @@
   /*box-shadow: 0 2px 0 0 @color-black;*/
 
   &::-webkit-input-placeholder {
-    .font(19px, 18px);
+    .font(17px, 18px);
     font-weight: 400;
     opacity: 0.3;
   }
 
   &::-moz-placeholder {
-    .font(19px, 18px);
+    .font(17px, 18px);
     font-weight: 400;
     opacity: 0.3;
   }
 
   &::-ms-input-placeholder {
-    .font(19px, 18px);
+    .font(17px, 18px);
     font-weight: 400;
     opacity: 0.3;
   }
@@ -81,7 +85,7 @@
   .email {
     display: flex;
     justify-content: flex-start;
-    padding-top: 20px;
+    padding-top: 17px;
   }
 
   .email__title {
@@ -89,8 +93,8 @@
   }
 
   .email__label {
-    bottom: 4px;
-    right: 71px;
+    bottom: 7px;
+    right: 72px;
   }
 
   .email__input {
@@ -99,7 +103,15 @@
     width: 501px;
     .font(19px, 18px);
 
-    &:placeholder {
+    &::-webkit-input-placeholder {
+      .font(19px, 18px);
+    }
+
+    &::-moz-placeholder {
+      .font(19px, 18px);
+    }
+
+    &::-ms-input-placeholder {
       .font(19px, 18px);
     }
   }
