--- a/source/less/blocks/form-order.less
+++ b/source/less/blocks/form-order.less
@@ -1,16 +1,12 @@
 .form-order {
-  padding: 0 30px;
+  padding: 0;
 }
 
 .form-order__fieldset {
   margin: 0;
-  padding: 0;
+  padding: 0 30px;
   border: none;
   overflow: hidden;
-}
-
-.form-order__fieldset--color {
-  background: @color-white-dark;
 }
 
 .form-order__legend {
@@ -26,7 +22,7 @@
     content: "";
     position: absolute;
     top: 7px;
-    width: 100%;
+    width: 76%;
     height: 1px;
     background-color: @color-green;
   }
@@ -34,8 +30,8 @@
 
 .form-order__desc {
   margin: 21px 0;
-  margin-bottom: 25px;
-  padding: 0;
+  margin-bottom: 24px;
+  padding: 0 30px;
   .font(13px, 24px);
   font-weight: 400;
   text-align: left;
@@ -54,7 +50,7 @@
   margin: 0;
   margin-top: 13px;
   margin-bottom: 30px;
-  padding: 0;
+  padding: 0 30px;
   .font (14px, 16px);
   font-weight: 400;
   color: @color-text;
@@ -63,6 +59,7 @@
 .form-order__btn {
   padding: 0;
   min-height: 53px;
+  .font (17px, 16px);
 }
 
 @media (min-width: @tablet-width) {
@@ -72,6 +69,10 @@
 
   .form-order__fieldset {
     padding: 0 50px;
+  }
+
+  .form-order__fieldset--color {
+    background: @color-white-dark;
   }
 
   .form-order__legend {
@@ -115,6 +116,7 @@
   .form-order__text {
     margin: 0;
     margin-top: 9px;
+	padding: 0;
     .font (17px, 30px);
   }
 }
@@ -130,6 +132,8 @@
   }
 
   .form-order-wrapper-btn {
-    padding: 0 175px;
+    margin-top: 50px;
+	padding: 0 225px;
   }
-}
+ }
+ 
