--- a/source/less/blocks/header-logo.less
+++ b/source/less/blocks/header-logo.less
@@ -21,6 +21,10 @@
 }
 
 @media (min-width: @tablet-width) {
+  .header-logo {
+    padding-top: 0;
+  }
+
   .header-logo__logo-image {
     width: 112px;
     height: 46px;
@@ -28,10 +32,6 @@
 }
 
 @media (min-width: @desktop-width) {
-  .header-logo {
-    padding-top: 9px;
-  }
-
   .header-logo__logo-image {
     width: 148px;
     height: 72px;
