--- a/source/less/blocks/offer-list.less
+++ b/source/less/blocks/offer-list.less
@@ -19,11 +19,11 @@
     flex-wrap: wrap;
     justify-content: flex-start;
     align-items: center;
+	position: relavite;
     z-index: 2;
-    margin-right: 80px;
-    margin-left: 50px;
+    margin-right: 30px;
     min-height: 60px;
-    width: 851px;
+    width: 750px;
 
     &__item {
       margin-right: 62px;
