--- a/source/less/blocks/phone.less
+++ b/source/less/blocks/phone.less
@@ -1,5 +1,5 @@
 .phone {
-  margin-bottom: 34px;
+  margin-bottom: 33px;
   position: relative;
 }
 
@@ -14,8 +14,8 @@
 .phone__label {
   content: "";
   position: absolute;
-  bottom: 12px;
-  right: 8px;
+  bottom: 14px;
+  right: 38px;
 
   & svg {
     width: 25px;
@@ -36,10 +36,10 @@
 
 .phone__input {
   padding: 0;
-  padding-top: 17px;
-  padding-bottom: 13px;
+  padding-top: 22px;
+  padding-bottom: 16px;
   width: 100%;
-  .font(19px, 18px);
+  .font(17px, 18px);
   font-weight: 400;
   color: @color-text;
   background-color: transparent;
@@ -48,19 +48,19 @@
   /*box-shadow: 0 2px 0 0 @color-black;*/
 
   &::-webkit-input-placeholder {
-    .font(19px, 18px);
+    .font(17px, 18px);
     font-weight: 400;
     opacity: 0.3;
   }
 
   &::-moz-placeholder {
-    .font(19px, 18px);
+    .font(17px, 18px);
     font-weight: 400;
     opacity: 0.3;
   }
 
   &::-ms-input-placeholder {
-    .font(19px, 18px);
+    .font(17px, 18px);
     font-weight: 400;
     opacity: 0.3;
   }
@@ -96,9 +96,20 @@
   .phone__input {
     padding-right: 60px;
     padding-left: 16px;
+	padding-top: 19px;
+	padding-bottom: 14px;
     width: 501px;
+	.font(19px, 18px);
 
-    &:placeholder {
+    &::-webkit-input-placeholder {
+      .font(19px, 18px);
+    }
+
+    &::-moz-placeholder {
+      .font(19px, 18px);
+    }
+
+    &::-ms-input-placeholder {
       .font(19px, 18px);
     }
   }
