--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -19,12 +19,16 @@
 }
 
 .reviews__list {
-  margin-bottom: 36px;
+  margin-bottom: 37px;
+
+  & br {
+    display: none;
+  }
 }
 
 .reviews__item {
   margin: 0;
-  margin-bottom: 33px;
+  margin-bottom: 34px;
 }
 
 .reviews__text {
@@ -53,7 +57,8 @@
 
 .reviews__btn {
   min-height: 52px;
-  width: 126px;
+  width: 127px;
+  padding: 0;
   border: 1px solid @color-grey;
   background-position: 50%;
   background-color: transparent;
@@ -100,8 +105,13 @@
   }
 
   .reviews__title {
-    padding-top: 77px;
+    padding-top: 75px;
+	margin-left: -5px;
     .font(43px, 50px);
+  }
+
+  .reviews__list {
+    margin-top: 49px;
   }
 
   .reviews__text {
@@ -110,13 +120,14 @@
   }
 
   .reviews__item {
-    margin-top: 49px;
+    margin-top: 48px;
   }
 
   .reviews__write {
     position: absolute;
     top: 79px;
     right: 50px;
+	padding-top: 13px;
     width: 175px;
   }
 
@@ -156,15 +167,21 @@
 
   .reviews__title {
     padding-top: 71px;
+	padding-left: 0;
     .font(53px, 57px);
   }
 
   .reviews__text {
-    margin-bottom: 36px;
+    margin-bottom: 37px;
     padding-right: 105px;
   }
 
+  .reviews__list br {
+    display: inline;
+  }
+
   .reviews__author-name {
+    margin-bottom: 7px;
     .font(17px, 27px);
   }
 
