--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -1,3 +1,8 @@
+.site-list {
+  display: flex;
+  flex-direction: column;
+}
+
 .site-list a {
   display: block;
   padding-top: 26px;
@@ -29,15 +34,14 @@
 
 @media (min-width: @tablet-width) {
   .site-list {
+    position: relative;
+	z-index: 2;
     order: 1;
-    display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    z-index: 2;
-    margin-right: 315px;
     min-height: 60px;
-    width: 500px;
+    width: 400px;
 
     &__item {
       margin-right: 36px;
@@ -55,8 +59,8 @@
 @media (min-width: @desktop-width) {
   .site-list {
     order: -1;
-    margin-right: 50px;
-    width: 493px;
+    padding-right: 10px;
+    width: 444px;
   }
 
   .site-list__item {
@@ -72,6 +76,10 @@
       width: 1px;
       height: 100%;
       background-color: @color-grey;
+    }
+
+    &:last-child {
+      margin-right: 0;
     }
 
     &:last-child::before {
