--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -11,8 +11,9 @@
   justify-content: space-around;
   flex-wrap: wrap;
   align-items: baseline;
-  width: 180px;
+  width: 190px;
   margin: 0 auto;
+  padding-right: 6px;
 }
 
 .social__link {
@@ -34,4 +35,9 @@
     padding-top: 4px;
     border-bottom: none;
   }
+
+.social__list {
+  width: 180px;
+  padding-right: 0;
+}
 }
