--- a/source/less/layout/page-header.less
+++ b/source/less/layout/page-header.less
@@ -21,7 +21,7 @@
   }
 
   .page-header__logo {
-    /*position: absolute;
-    left: calc(50% - 74px);*/
+    width: 148px;
+    height: 72px;
   }
 }
