--- a/source/less/layout/page-main.less
+++ b/source/less/layout/page-main.less
@@ -11,7 +11,8 @@
 
   @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
     background-image: url("../img/hero-mobile@2x.jpg");
-    background-size: 322px auto;
+    background-size: 573px auto;
+	background-position-y: -18px;
   }
 }
 
@@ -56,7 +57,7 @@
     margin-top: -63px;
     background-image: url("../img/hero-tablet@1x.jpg");
 
-    &::before {
+    /*&::before {
       content: "";
       position: absolute;
       top: 0;
@@ -67,11 +68,12 @@
       margin-left: calc(50% - 50vw);
       margin-right: calc(50% - 50vw);
       background-color: @color-white-middle;
-    }
+    }*/
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
       background-image: url("../img/hero-tablet@2x.jpg");
-      background-size: 772px auto;
+      background-size: 1155px auto;
+	  background-position-y: 0;
     }
   }
 
