--- a/source/less/blocks/user-list.less
+++ b/source/less/blocks/user-list.less
@@ -39,7 +39,7 @@
 .user-list__item {
   min-height: 79px;
 
-  &-noactive {
+  &--noactive {
     display: none;
   }
 }
@@ -51,7 +51,7 @@
     justify-content: flex-end;
     flex-grow: 1;
     align-items: center;
-	padding-left: 10px;
+    padding-left: 10px;
     min-height: 88px;
     width: 555px;
   }
@@ -109,6 +109,6 @@
 
   .user-list__link {
     padding-left: 83px;
-	padding-right: 2px;
+    padding-right: 2px;
   }
 }
