--- a/source/less/mixins_variables.less
+++ b/source/less/mixins_variables.less
@@ -35,11 +35,11 @@
   list-style: none;
 }
 
-body {
+/*body {
   background: url("../pixel/mishka-index-mobile.jpg") no-repeat 50% 0;
   background-size: 320px auto;
   min-height: 750px;
-}
+}*/
 /*body > * {
   outline: 2px solid rgba(0, 0 , 150, 0.4);
 }
@@ -67,7 +67,7 @@ body > * > * > * > * > * > * {
 body > * > * > * > * > * > * > * {
   outline: 2px solid rgba(0, 150 , 255, 0.4);
 }*/
-@media (min-width: @tablet-width) {
+/*@media (min-width: @tablet-width) {
   body {
     background: url("../pixel/mishka-index-tablet.jpg") no-repeat 50% 0;
     background-size: 768px auto;
@@ -79,4 +79,4 @@ body > * > * > * > * > * > * > * {
     background: url("../pixel/mishka-index-desktop.jpg") no-repeat 50% 0;
     background-size: 1150px auto;
   }
-}
+}*/
