--- a/source/less/blocks/popular.less
+++ b/source/less/blocks/popular.less
@@ -72,6 +72,7 @@
     width: 128px;
     .font(17px, 17px);
     text-align: center;
+    text-transform: uppercase;
   }
 
   .popular__wrapper-title {
